# monteCarloSuite

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
client/: .dockerignore  .env  Dockerfile  nginx.conf  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  ThemeContext.js  index.js
client/src/components/: Benchmark.js  BlackScholes.js
server/: .dockerignore  Dockerfile  package-lock.json  package.json  server.js
server/config/: db.js
server/controllers/: historyController.js
server/cpp/: CMakeLists.txt  README.md  build.sh  monte_carlo
server/cpp/src/: monte_carlo.cpp
server/models/: SimulationHistory.js
server/routes/: historyRoutes.js
server/src/: routes.js
server/utils/: benchmark_service.js  black_scholes_analytical.js  monte_carlo_cpp.js  monte_carlo_js.js  monte_carlo_service.js
